athlete editing + personal records